fix: only truncate file names on hover for file list
Previously the actions were always there, but not shown and file names were truncated even when they didn't need to be.

--- a/src/sass/ui/_actions.sass
+++ b/src/sass/ui/_actions.sass
@@ -2,6 +2,7 @@
   align-items: center
   display: flex
   flex-flow: row
+  flex-wrap: nowrap
   column-gap: $le-space-xxsmall
   margin: 0 $le-space-medium
 
